@@ -28,7 +28,8 @@ and most of the test cases. Details here:
 * New feature: CuratorTempFramework. Temporary CuratorFramework instances are meant for single requests to
 ZooKeeper ensembles over a failure prone network such as a WAN. The APIs available from CuratorTempFramework
 are limited. Further, the connection will be closed after a period of inactivity. Based on an idea mentioned in a
-post by Camille Fournier: http://whilefalse.blogspot.com/2012/12/building-global-highly-available.html
+post by Camille Fournier: http://whilefalse.blogspot.com/2012/12/building-global-highly-available.html - details
+here: https://github.com/Netflix/curator/wiki/Temporary-Framework
 
 1.2.5 - November 27, 2012
 =========================
